--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Password Manager</title>
+  <title>Lockity</title>
 </head>
 
 <body class="from-[#3f68d3] to-[#b397e1] bg-gradient-to-b">
